# Traductor_esp

./: .gitignore  README.md  main.py  pyproject.toml
tests/integration/: test_ollama_client.py
tests/unit/: test_entities.py  test_translate_book.py
traductor/: main.py
traductor/application/ports/: extractor_port.py  glossary_port.py  translator_port.py
traductor/application/use_cases/: translate_book.py
traductor/domain/: entities.py
traductor/infrastructure/database/: sqlite_glossary.py
traductor/infrastructure/extractors/: bs4_extractor.py  epub_extractor.py
traductor/infrastructure/translators/: ollama_client.py
traductor/presentation/: cli.py
